# presenter/handler/docs/swagger.json
@@ -19,7 +19,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Reservation"
+                    "Dashboard"
                 ],
                 "summary": "Get dashboard data",
                 "parameters": [
@@ -60,7 +60,7 @@
         },
         "/login": {
             "post": {
-                "description": "Melakukan login user",
+                "description": "Melakukan login user berdasarkan username dan password misalnya \"username\": \"user1\", \"password\": \"password\"",
                 "consumes": [
                     "application/json"
                 ],
@@ -97,29 +97,6 @@
                     },
                     "401": {
                         "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/logout": {
-            "post": {
-                "description": "Melakukan logout user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Authentication"
-                ],
-                "summary": "Logout user",
-                "responses": {
-                    "200": {
-                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/response.APIResponse"
                         }
@@ -237,53 +214,6 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Menyimpan reservation",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Reservation"
-                ],
-                "summary": "Save reservation",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Inquiry ID",
-                        "name": "inquiry_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
-                        }
-                    }
-                }
             }
         },
         "/reservations/inquiry": {
@@ -359,16 +289,14 @@
                     {
                         "type": "string",
                         "description": "Start date",
-                        "name": "startDate",
-                        "in": "query",
-                        "required": true
+                        "name": "start_date",
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "End date",
-                        "name": "endDate",
-                        "in": "query",
-                        "required": true
+                        "name": "end_date",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -514,6 +442,55 @@
                         "type": "integer",
                         "description": "Reservation ID",
                         "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.APIResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.APIResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/reservations/{inquiry_id}": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Menyimpan reservation",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reservation"
+                ],
+                "summary": "Save reservation",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Inquiry ID",
+                        "name": "inquiry_id",
                         "in": "path",
                         "required": true
                     }
@@ -793,7 +770,7 @@
                 ],
                 "description": "Mengupdate room berdasarkan id",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -811,13 +788,28 @@
                         "required": true
                     },
                     {
-                        "description": "Room Request",
-                        "name": "room",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.RoomRequest"
-                        }
+                        "type": "string",
+                        "description": "Room Name",
+                        "name": "name",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Room Type ID",
+                        "name": "room_type_id",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Price",
+                        "name": "price",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Capacity",
+                        "name": "capacity",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -1073,15 +1065,21 @@
                         "in": "formData"
                     },
                     {
-                        "type": "string",
+                        "type": "boolean",
                         "description": "IsAdmin",
                         "name": "isAdmin",
                         "in": "formData"
                     },
                     {
-                        "type": "string",
+                        "type": "boolean",
                         "description": "IsActive",
                         "name": "isActive",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Language",
+                        "name": "language",
                         "in": "formData"
                     },
                     {
@@ -1182,48 +1180,6 @@
                 "startTime": {
                     "type": "string",
                     "example": "08:00"
-                },
-                "userId": {
-                    "type": "integer",
-                    "example": 1
-                }
-            }
-        },
-        "model.RoomRequest": {
-            "type": "object",
-            "required": [
-                "capacity",
-                "name",
-                "price",
-                "room_type"
-            ],
-            "properties": {
-                "capacity": {
-                    "type": "integer",
-                    "minimum": 1,
-                    "example": 20
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "imgUrl": {
-                    "type": "string",
-                    "example": "https://example.com/image.jpg"
-                },
-                "name": {
-                    "type": "string",
-                    "minLength": 2,
-                    "example": "Aster Room"
-                },
-                "price": {
-                    "type": "integer",
-                    "minimum": 1,
-                    "example": 10000
-                },
-                "room_type": {
-                    "type": "integer",
-                    "minimum": 1,
-                    "example": 1
                 }
             }
         },
